added CSS style| added restart/playagain

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        
         <div class="wrapper">
+            <div class="title">Tic Tac Toe <small>by Z4HI</small></div>
+            <div class="goesFirst"></div>
             <header>
                 <div class="player1score"></div>
                 <div class="player2score"></div>
@@ -21,8 +24,8 @@
             <div class="gameSettings">
                 <input type="text" id="player1" placeholder="player 1">
                 <input type="text" id="player2" placeholder="player 2">
-                <button class="start">START</button>
-                <button class="restart">RESTART</button>
+                <button class="start">START/RESTART</button>
+                <button class="restart">Play Again</button>
             </div>
         </div>
         
