--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             <div class="gameSettings">
                 <input type="text" id="player1" placeholder="player 1">
                 <input type="text" id="player2" placeholder="player 2">
+                <button class="cpu">CPU</button>
                 <button class="start">START/RESTART</button>
                 <button class="restart">Play Again</button>
+                
             </div>
         </div>
         
