added clear inner text on cpu off

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <button class="restart">Play Again</button>
                 </div>
                 <div class="bottom">
-                    <button class="cpu">CPU</button>
+                    <button class="cpu">Easy CPU</button>
                 </div>
             </div>
         </div>
