--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 </div>
                 <div class="bottom">
                     <button class="cpu">Easy CPU</button>
+                    <button class="cpuHard">Hard CPU</button>
                 </div>
             </div>
         </div>
