--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
+        <script src="https://kit.fontawesome.com/dbb7381a19.js" crossorigin="anonymous"></script>
     </head>
     <body>
         
